--- a/src/styles/weatherApp.css
+++ b/src/styles/weatherApp.css
@@ -3,10 +3,10 @@ body{
 }
 .weatherContainer{
   width: 300px;
-  height: 300px;
   margin: 0px auto;
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .lightBack {
   height: 100vh;
@@ -38,7 +38,7 @@ body{
   margin: auto;
   border-radius: 20px;
   padding: 10px;
-  width: 90px;
+  width: 100px;
   height: 40px;
   margin-bottom: 20px;
 }
@@ -68,6 +68,8 @@ body{
     margin: 0px auto;
     display: flex;
     flex-direction: column;
+    justify-content: start;
+    
   }
 
 }
