--- a/src/styles/weatherMainInfo.css
+++ b/src/styles/weatherMainInfo.css
@@ -35,6 +35,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: white;
+  border-radius: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .border{
   border-radius: 50px;
@@ -61,9 +65,21 @@
   display: flex;
   flex-direction: column;
 }
+.mapInfo{
+  width: 100%;
+  height: 220px;
+  border: 0;
+  border-radius: 50px;
+}
 @media screen and (min-width: 700px){
   .mainInfo {
     padding: 40px;
+  }
+  .mapInfo{
+    width: 100%;
+    height: 350px;
+    border: 0;
+    border-radius: 50px;
   }
 }
 
